--- a/PSO.ipynb
+++ b/PSO.ipynb
@@ -55,15 +55,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "code_folding": [
-     2,
-     50,
-     63,
-     99,
-     136,
-     200,
-     232
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
